syntax = "proto3";
package universal;

option go_package = "universal/common/pb";

import "global_enum_cfg.proto";

message Node {
  string   Name = 1;  // 节点名称
  string   Addr = 2;  // 节点地址
  NodeType Type = 3;  // 节点类型
  uint32   Id   = 4;  // 节点ID
}

message NodeRouter {
  NodeType NodeType  = 1;
  uint32   NodeId    = 2;
  uint32   ActorName = 3;
  uint32   FuncName  = 4;
  uint64   ActorId   = 5;
}

message Head {
  NodeRouter Src       = 1;
  NodeRouter Dst       = 2;
  uint64     Uid       = 3;
  uint32     Seq       = 4;
  uint32     Cmd       = 5;
  uint32     ActorName = 7;
  uint32     FuncName  = 8;
  uint64     ActorId   = 9;
  uint32     Reference = 10;
  string     Reply     = 6;
}

message Packet {
  Head  Head = 1;
  bytes Body = 2;
}

message RspHead {
  int32  Code   = 1;
  string ErrMsg = 2;
}
